--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,9 +15,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@main
     - name: Set up JDK 11
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@main
       with:
         java-version: '11'
         distribution: 'adopt'
