--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,12 +15,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@main
+    - uses: actions/checkout@v2
     - name: Set up JDK 11
-      uses: actions/setup-java@main
+      uses: actions/setup-java@v2
       with:
         java-version: '11'
         distribution: 'adopt'
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-    - uses: actions/upload-artifact@v2.2.3
+    - name: Upload
+      uses: actions/upload-artifact@v2.2.3
+   
