--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Build with Maven
       run: mvn --batch-mode --update-snapshots verify
     - name: Upload
-      uses: actions/upload-artifact@v2.2.3
+      uses: actions/upload-artifact@v2-previe
       with:
         name: MasterChat-0.1
         path: target/MasterChat-0.1.jar
